--- a/style.css
+++ b/style.css
@@ -2,3 +2,31 @@ body {
     margin: 0;
     padding: 0;
 }
+#div1{
+    width: 100%;
+    height: 590px;
+    background-color: rgb(159, 202, 178);
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+}
+#div1 div{
+    width: 33%;
+    height: 100%;
+    margin-top: 50px;
+}
+.num{
+    color: white;
+    font-size: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.text{
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
