--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     margin-top: 50px;
 }
 .num{
+    margin: 0;
     color: white;
     font-size: 200px;
     font-family: Arial, Helvetica, sans-serif;
