--- a/style.css
+++ b/style.css
@@ -31,3 +31,21 @@ body {
     font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#third-part {
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.third-part-content-inner {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.third-part-content-inner-items {
+    width: 350px;
+    height: 300px;
+    border: 1px solid;
+    margin: 10px;
+}
