--- a/style.css
+++ b/style.css
@@ -5,15 +5,19 @@ body {
 #div2{
     width: 100%;
     height: 590px;
-    background-color: rgb(159, 202, 178);
-    display: flex;
-    justify-content: center;
+    background-color: rgb(159, 202, 178);  
     box-sizing: border-box;
 }
 
-#div2 div{
-    width: 33%;
-    height: 100%;
+#div-wrap{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.div-inner{
+    width: 400px;
+    height: 590px;
     margin-top: 50px;
 }
 
