--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@ body {
     padding: 0;
 }
 #div2{
-    width: 100%;
-    height: 590px;
+    padding: 30px;
     background-color: rgb(159, 202, 178);  
     box-sizing: border-box;
 }
