--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ body {
 
 #third-part-content-down-content div {
     width: 500px;
-    height: 150px;
     margin: 20px;
 }
 
@@ -108,4 +107,15 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
+}
+
+
+@media screen and (max-width: 500px) {
+    .third-part-content-inner-items {
+        width: 300px;
+        height: 250px;
+    }
+    #third-part-content, #third-part-content-down {
+        padding: 5px;
+    }
 }
