--- a/style.css
+++ b/style.css
@@ -2,6 +2,34 @@ body {
     margin: 0;
     padding: 0;
 }
+
+#div1{
+    overflow: visible;
+    background-image: url("https://images03.nicepage.com/c461c07a441a5d220e8feb1a/cbe298b85a245e2f965a5a31/b-min.jpg");
+    background-position: 50% 50%;
+    color: #ffffff;
+    object-fit: cover;
+    display: block;
+    background-size: cover;
+    background: no-repeat;
+}
+
+#div1-inner{
+    min-height: 751px;
+    margin: 0 auto;
+}
+
+#div1-box{
+    display: flex;
+    width: 730px;
+  min-height: 431px;
+  box-shadow: 0 0 40px 4px rgba(26,26,26,0.8);
+  margin: 60px auto;
+  background-color: transparent !important;
+  opacity: 1;
+  border: solid 6px #ffffff;
+}
+
 #div2{
     padding: 30px;
     background-color: #d8dfd0;  
