--- a/style.css
+++ b/style.css
@@ -4,31 +4,69 @@ body {
 }
 
 #div1{
-    background-color: black;
     background-image: url("https://images03.nicepage.com/c461c07a441a5d220e8feb1a/cbe298b85a245e2f965a5a31/b-min.jpg");
     background-position: 50% 50%;
     color: #ffffff;
-    object-fit: cover;
     display: block;
     background-size: cover;
-    background: no-repeat;
-
 }
 
 #div1-inner{
     min-height: 751px;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #div1-box{
     display: flex;
     width: 730px;
-  min-height: 431px;
-  box-shadow: 0 0 40px 4px rgba(26,26,26,0.8);
-  margin: 60px auto;
-  background-color: transparent !important;
-  opacity: 1;
-  border: solid 6px #ffffff;
+    min-height: 431px;
+    box-shadow: 0 0 40px 4px rgba(26,26,26,0.8);
+    margin: 60px auto;
+    background-color: transparent !important;
+    opacity: 1;
+    border: solid 6px #ffffff;
+}
+
+#div1-box-inner{
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    max-width: 100%;
+}
+
+#div1-box-inner h6{
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 3px;
+    font-size: 1.125rem;
+    margin: 0;
+    position: relative;
+    padding: 0;
+    word-wrap: break-word;
+    line-height: 1.2;
+}
+
+#div1-box-inner h1{
+    font-size: 4.5rem;
+  letter-spacing: 1px;
+  margin: 16px 0 0;
+  font-family: 'Playfair Display', serif !important;
+  position: relative;
+  font-weight: 400;
+  padding: 0;
+  word-wrap: break-word;
+}
+
+#div1-box-inner b{
+    font-weight: bold;
+    font-size: 4.5rem;
+  letter-spacing: 1px;
+  font-family: 'Playfair Display', serif !important;
+  word-wrap: break-word;
 }
 
 #div2{
