--- a/style.css
+++ b/style.css
@@ -2,3 +2,26 @@ body {
     margin: 0;
     padding: 0;
 }
+
+
+.part-six {
+    width: 100%;
+    display: flex;
+}
+.picture-1 {
+    width: 50%;
+    height: 800px;
+    background-image: url("https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/7a741ca8672855049de99b33/pexelsphoto1600130.jpeg");
+    background-position: 50% 50%;
+    background-size: cover;
+}
+.picture-2 {
+    width: 50%;
+    height: 800px;
+    background-image: url("https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/34e7285222bb5eb2b79f2c42/pexelsphoto1622419.jpeg");
+    background-position: 50% 50%;
+    flex-wrap: wrap;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
