--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 #div1-box{
@@ -36,6 +37,7 @@ body {
     flex-direction: column;
     position: relative;
     max-width: 100%;
+    text-align: center;
 }
 
 #div1-box-inner h6{
@@ -266,6 +268,26 @@ body {
     background-image: url("https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/00f8cd68c92954df8040606c/pexelsphoto3825576.jpeg");
     background-position: 20% 10%;
     background-size: cover;
+}
+
+@media screen and (min-width: 1200px) {
+    #div1-inner{
+        width: 1140px;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+    }
+    #div1-box{
+        text-align: center;
+    }
+
+    #div1-box-inner h6{
+        text-align: center;
+    }
+
+    #div1-box-inner h1{
+        text-align: center;
+    }
 }
 
 @media screen and (max-width:768px) {
