--- a/style.css
+++ b/style.css
@@ -140,22 +140,17 @@ body {
 }
 
 .part-six {
-}
-#div-wrap {
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
 }
+
 .picture-1 {
     width: 50%;
-    height: 800px;
     background-image: url("https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/7a741ca8672855049de99b33/pexelsphoto1600130.jpeg");
     background-position: 50% 50%;
     background-size: cover;
 }
 .picture-2 {
     width: 50%;
-    height: 800px;
     background-image: url("https://images03.nicepage.com/a1389d7bc73adea1e1c1fb7e/34e7285222bb5eb2b79f2c42/pexelsphoto1622419.jpeg");
     background-position: 50% 50%;
     background-size: cover;
@@ -180,6 +175,14 @@ body {
     padding-top: 550px;;
 }
 
+@media screen and (max-width:768px) {
+    .part-six {
+        display: block;
+    }
+    .picture-1, .picture-2 {
+        width: 100%;
+    }
+}
 
 @media screen and (max-width: 500px) {
     .third-part-content-inner-items {
