--- a/style.css
+++ b/style.css
@@ -5,14 +5,11 @@ body {
 
 #div1{
     background-color: black;
-    background-image: url("https://images03.nicepage.com/c461c07a441a5d220e8feb1a/cbe298b85a245e2f965a5a31/b-min.jpg");
+    background-image:url("https://images03.nicepage.com/c461c07a441a5d220e8feb1a/cbe298b85a245e2f965a5a31/b-min.jpg");
     background-position: 50% 50%;
     color: #ffffff;
-    object-fit: cover;
     display: block;
     background-size: cover;
-    background: no-repeat;
-
 }
 
 #div1-inner{
@@ -230,6 +227,55 @@ body {
     background-size: cover;
 }
 
+.part-seven-place-holder {
+    width: 550px;
+    height: 100%;
+    margin-left:390px;
+    position: relative;
+}
+.part-seven-content{
+    width: 90%;
+    height: 50%;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 50px;
+}
+
+.part-seven-content-text h1 {
+  font-size: 45px;
+  color: white;
+}
+
+.part-seven-content-buttonAndInput {
+    display: flex;
+    justify-content: space-between;
+}
+
+.part-seven-input input {
+    width: 275px;
+    height: 55px;
+    background-color:transparent;
+    border:solid 5px white;
+    color: black;
+}
+
+.part-seven-input input,
+input::placeholder {
+    font: 20px sans-serif ;
+    color: white;
+}
+
+.part-seven-button button {
+    width: 115px;
+    height: 67px;
+    border: white;
+    background-color:white;
+    font-size: 25px;
+}
+
+.part-seven-button button:hover{
+    background-color:rgb(231, 227, 227);
+}
 @media screen and (max-width:768px) {
     .part-six {
         display:block;
@@ -239,11 +285,28 @@ body {
     }
 }
 
+@media screen and (max-width:1230px) {
+    .part-seven {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .part-seven-place-holder {
+        width: 550px;
+        height: 100%;
+        margin: 0 0 0 0;
+    }
+    .part-seven h1 {
+        font-size: 35px;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .third-part-content-inner-items {
         width: 300px;
         height: 250px;
     }
+    
     #third-part-content, #third-part-content-down {
         padding: 5px;
     }
